# kserve

./: .flake8  .gitignore  .golangci.yml  .syft.yaml  Dockerfile  Makefile  Makefile.tools.mk  README.md  agent.Dockerfile  go.mod  go.sum  kserve-deps.env  llmisvc-controller.Dockerfile  localmodel-agent.Dockerfile  localmodel.Dockerfile  router.Dockerfile  rpms.in.yaml  rpms.lock.yaml
.github/workflows/: agent-docker-publish.yml  build-llmisvc-controller-image.yml  distro-build-check.yml  e2e-test-llmisvc.yaml  e2e-test-llmisvc.yml  e2e-test-odh-xks-kind.yml  e2e-test.yml  go.yml  instant-merge.yaml  kserve-controller-docker-publish.yml  kserve-localmodel-agent-docker-publish.yml  kserve-localmodel-controller-docker-publish.yml  odh-create-release-tag.yml  precommit-check.yml  python-test.yml  qpext-docker-publish.yml  router-docker-publish.yml  scheduled-go-security-scan.yml  storage-initializer-docker-publisher.yml  validate-manifests.yml
.tekton/: README.md  kserve-28-pull-request.yaml  kserve-28-push.yaml  kserve-agent-211-pull-request.yaml  kserve-agent-211-push.yaml  kserve-agent-28-pull-request.yaml  kserve-agent-28-push.yaml  kserve-agent-hermetic-poc-pull-request.yaml  kserve-agent-hermetic-poc-push.yaml  kserve-agent-pull-request.yaml  kserve-agent-pull.yaml  kserve-agent-push.yaml  kserve-agent-test-hermetic-poc-pull-request.yaml  kserve-agent-test-hermetic-poc-push.yaml  kserve-agent-v2-18-push.yaml  kserve-agent-v2-19-push.yaml  kserve-alibi-explainer-28-pull-request.yaml  kserve-alibi-explainer-28-push.yaml  kserve-art-explainer-28-pull-request.yaml  kserve-art-explainer-28-push.yaml  kserve-controller-211-pull-request.yaml  kserve-controller-211-push.yaml  kserve-controller-28-pull-request.yaml  kserve-controller-28-push.yaml  kserve-controller-hermetic-test-pull-request.yaml  kserve-controller-hermetic-test-push.yaml  kserve-controller-pull-request.yaml  kserve-controller-pull.yaml  kserve-controller-push.yaml  kserve-controller-test-hermetic-poc-pull-request.yaml  kserve-controller-test-hermetic-poc-push.yaml  kserve-controller-v2-18-push.yaml  kserve-controller-v2-19-push.yaml  kserve-group-test.yaml  kserve-qpext-28-pull-request.yaml  kserve-qpext-28-push.yaml  kserve-router-211-pull-request.yaml  kserve-router-211-push.yaml  kserve-router-28-pull-request.yaml  kserve-router-28-push.yaml  (+35 more)
Dockerfiles/: agent.Dockerfile.konflux  controller.Dockerfile.konflux  localmodel-agent.Dockerfile.konflux  localmodel.Dockerfile.konflux  router.Dockerfile.konflux  storage-initializer.Dockerfile.konflux
charts/kserve-crd/: Chart.yaml  README.md
charts/kserve-crd-minimal/: Chart.yaml  README.md
charts/kserve-resources/: Chart.yaml  README.md  values.yaml
cmd/agent/: main.go
cmd/llmisvc/: main.go  manager_options_distro.go  manager_options_ocp.go
cmd/manager/: main.go
cmd/router/: main.go
config/configmap/: inferenceservice.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/llmisvc/: config-llm-decode-template.yaml  config-llm-decode-worker-data-parallel.yaml  config-llm-prefill-template.yaml  config-llm-prefill-worker-data-parallel.yaml  config-llm-router-route.yaml  config-llm-scheduler.yaml  config-llm-template.yaml  config-llm-worker-data-parallel.yaml  kustomization.yaml  llm-d.yaml
config/llmisvcconfig/: config-llm-decode-template.yaml
config/manager/: manager.yaml
config/rbac/: role.yaml
config/webhook/: manifests.yaml
docs/apis/: Dockerfile
docs/odh/: install-kserve.md
gkm_cache/: Containerfile.mcv  README.md  VLLM_CACHE_KSERVE_INTEGRATION.md  build-service-account.yaml  gkmcache-vllm.yaml  pipeline.yaml  pipelinerun-template.yaml  task-cache-image-packager.yaml  task-cache-metadata-generator.yaml  task-gkm-cache-provisioner.yaml  task-gpu-environment-detector.yaml  task-isvc-cache-collector.yaml  task-preflight-check.yaml  task-registry-image-pusher.yaml
hack/: deploy_dev_llm.sh  generate-install.sh  llmisvc_quick_install.sh  quick_install.sh  self-signed-ca.sh  violation_exceptions.list
install/v0.13.0-rc0/: kserve_kubeflow.yaml
migration-helper/: README.md  modelmesh-to-raw.sh
pkg/constants/: constants.go
pkg/credentials/: service_account_credentials_test.go
pkg/logger/: handler.go  types.go  (+2 more)
python/: custom_model_grpc.Dockerfile  rpms.in.yaml  rpms.lock.yaml  sklearn.Dockerfile  storage-initializer.Dockerfile  ubi.repo
python/storage/: pyproject.toml
python/storage/storage/: ks_storage.py
qpext/: go.mod  go.sum  qpext.Dockerfile
(+381 files in other folders)
