[tool.poetry]
name = "kserve-storage"
version = "00001"
readme = "README.md"
description = "KServe Storage Handler. This module is responsible to download the models from the provided source"
authors = [
    "The KServe Authors <dsun20@bloomberg.net>",
    "The KServe Authors <fspolti@redhat.com>",
]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "kserve_storage"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = { version = "^2.32.2"}
google-cloud-storage = { version = "^2.14.0"}
azure-storage-blob = { version = "^12.20.0"}
azure-storage-file-share = { version = "^12.16.0"}
azure-identity = { version = "^1.15.0"}
boto3 = { version = "^1.29.0"}
huggingface-hub = { version = "^0.30.0", extras = ["hf-transfer"]}
# CVE-2026-32597 PyJWT accepts unknown `crit` header extensions (RFC 7515 §4.1.11 MUST violation)
# Pinning because it is a transitive dependency.
PyJWT = {version = ">=2.12.0"}
# CVE-2026-26007 cryptography fails to validate EC public key subgroup membership (SECT curves)
# Pinning because it is a transitive dependency.
cryptography = {version = ">=46.0.5"}


#[tool.poetry-version-plugin]
#source = "file"
#file_path = "../VERSION"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"